--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint 'src/app/**/*.{ts,tsx}' --fix"
+    "lint": "eslint 'src/app/**/*.{ts,tsx}' --fix && prettier --write 'src/app/**/*.{ts,tsx,js,jsx,json,css,md}'"
   },
   "dependencies": {
     "firebase": "^11.1.0",
@@ -22,8 +22,11 @@
     "@types/react-dom": "^19",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
