--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
