--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.1.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
