--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.6",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
