--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-contenteditable": "^3.3.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.5.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1"
   },
@@ -26,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-grid-layout": "^1.3.5",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.0.0",
