--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write 'src/app/**/*.{ts,tsx,js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "@fontsource/merriweather": "^5.1.1",
+    "@fontsource/playfair-display": "^5.1.1",
     "draft-js": "^0.11.7",
     "firebase": "^11.1.0",
     "next": "15.1.3",
