--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/merriweather": "^5.1.1",
     "@fontsource/playfair-display": "^5.1.1",
+    "@heroicons/react": "^2.2.0",
     "draft-js": "^0.11.7",
     "firebase": "^11.1.0",
     "next": "15.1.3",
@@ -24,7 +25,8 @@
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.5.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-grid-layout": "^1.3.5",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.0.0",
