--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/merriweather": "^5.1.1",
     "@fontsource/playfair-display": "^5.1.1",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "draft-js": "^0.11.7",
     "firebase": "^11.1.0",
