--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fontsource/playfair-display": "^5.1.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
     "draft-js": "^0.11.7",
     "firebase": "^11.1.0",
     "next": "15.1.3",
@@ -27,7 +29,10 @@
     "react-grid-layout": "^1.5.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "uuid": "^11.0.5"
+    "react-zdog": "^1.2.2",
+    "three": "^0.172.0",
+    "uuid": "^11.0.5",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
