--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
+    "@tiptap/pm": "^2.11.4",
+    "@tiptap/react": "^2.11.4",
+    "@tiptap/starter-kit": "^2.11.4",
     "draft-js": "^0.11.7",
     "firebase": "^11.1.0",
     "next": "15.1.3",
