--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
+    "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/pm": "^2.11.4",
     "@tiptap/react": "^2.11.4",
     "@tiptap/starter-kit": "^2.11.4",
